# SKSE-Menu-Framework-3

./: AGENTS.md  CMakeLists.txt  Usage.md  vcpkg.json
include/: Config.h  FontManager.h  Hooks.h  Renderer.h  SKSEMenuFramework.h
public/SKSE/plugins/: SKSEMenuFramework.ini  SKSEMenuFrameworkStrings.json  SKSEMenuFrameworkStrings_PT.json
public/SKSE/plugins/SKSEMenuFrameworkThemes/: skyrimDefault.json
resources/: SKSEMenuFramework.h
src/: Config.cpp  FontManager.cpp  GameLock.cpp  Hooks.cpp  Renderer.cpp  SKSEMenuFramework.cpp  Translations.cpp  UI.cpp  plugin.cpp
